style.css
*{
    margin:0;
    padding:0;
    box-sizing:border-box;
}

html{
    scroll-behavior:smooth;
}

body{
    font-family:Inter,sans-serif;
    background:#f8fafc;
    color:#1e293b;

}

nav{
    position:sticky;
    top:0;
    background:white;
    display:flex;
    justify-content:center;
    gap:40px;
    padding:18px;
    box-shadow:0 2px 10px rgba(0,0,0,.05);
    z-index: 1000;
}

nav a{
    text-decoration:none;
    color:#1e293b;
    font-weight:600;
    z-index: 1000;
}

nav a:hover{
    color:#2563eb;
}

section{
    max-width:900px;
    margin:auto;
    padding:80px 20px;

}

.hero{
    min-height:90vh;
    display:flex;
    flex-direction:column;
    justify-content:center;
    align-items:center;
    text-align:center;

}

.hero h1{
    font-size:60px;
    margin-bottom:10px;
}

.hero h3{
    color:#2563eb;
    margin-bottom:15px;
}

.hero p{
    color:#64748b;
}

.buttons{
    margin-top:30px;
    display:flex;
    gap:15px;
    flex-wrap:wrap;
}

.buttons a{
    text-decoration:none;
    background:#2563eb;
    color:white;
    padding:12px 22px;
    border-radius:8px;
    transition:.3s;
}

.buttons a:hover{
    background:#1d4ed8;
    transform:translateY(-3px);
}

h2{
    margin-bottom:25px;
    font-size:35px;
}

.card{
    background: white;
    padding: 30px;
    border-radius: 15px;
    box-shadow: 0 5px 15px rgba(0,0,0,.08);
    max-width: 850px;
    margin: 0 auto 30px;
}

.card ul{
    margin-top:15px;
    padding-left:20px;

}

.skills{
    display:flex;
    gap:15px;
    flex-wrap:wrap;

}

.skills span{
    background:#dbeafe;
    color:#1e40af;
    padding:10px 18px;
    border-radius:30px;
}

footer{
    text-align:center;
    padding:40px;
    color:#64748b;
}

:root{
    --bg:#f8fafc;
    --text:#1e293b;
    --card:#ffffff;
    --primary:#2563eb;
}

.dark{
    --bg:#0f172a;
    --text:#f8fafc;
    --card:#1e293b;
    --primary:#3b82f6;
}

body{
    background:var(--bg);
    color:var(--text);
    transition:.3s;
}

.card{
    background:var(--card);
}
.tech{
    display:flex;
    gap:10px;
    margin-top:15px;
    flex-wrap:wrap;
}

.tech span{
    background:#dbeafe;
    color:#1e40af;
    padding:6px 12px;
    border-radius:20px;
    font-size:14px;
}

.project-links{
    margin-top:20px;
    justify-content: left;
}

.project-links a{
    text-decoration:none;
    color:white;
    background:#2563eb;
    padding:8px 16px;
    border-radius:8px;
    margin-right:10px;
}

.card{
    transition:.3s;
}

.card:hover{
    transform:translateY(-8px);
    box-shadow:0 15px 30px rgba(0,0,0,.12);
}

.badges{
    display:flex;
    flex-wrap:wrap;
    gap:12px;
    margin-top:20px;
    border-radius: 0;
}

.badges img{
    transition:0.3s;
}

.badges img:hover{
    transform:scale(1.05);
}

